@@ -9,6 +9,9 @@
   <Anty_Larva_B_Brave.title>Anty Brave Larva</Anty_Larva_B_Brave.title>
   <Anty_Larva_B_Brave.titleShort>Anty</Anty_Larva_B_Brave.titleShort>
   <Anty_Larva_B_Brave.baseDescription>[PAWN_nameDef] was one daring larva. [PAWN_pronoun] enjoyed extreme activities such as rolling from over the small ledge, squirming over a hard and round surface, and fighting off some mean flies. [PAWN_objective] didn't enjoy the part where he got scolded for it by the nannies.</Anty_Larva_B_Brave.baseDescription>
+  <Anty_Larva_B_Brave_Drop.title>Anty Brave Larva</Anty_Larva_B_Brave_Drop.title><!-- Change -->
+  <Anty_Larva_B_Brave_Drop.titleShort>Anty</Anty_Larva_B_Brave_Drop.titleShort><!-- Change -->
+  <Anty_Larva_B_Brave_Drop.baseDescription>[PAWN_nameDef] was one daring larva. [PAWN_pronoun] enjoyed extreme activities such as rolling from over the small ledge, squirming over a hard and round surface, and fighting off some mean flies. [PAWN_objective] didn't enjoy the part where he got scolded for it by the nannies.</Anty_Larva_B_Brave_Drop.baseDescription><!-- Change -->
   <Anty_Larva_B_Evil.title>Anty Evil Larva</Anty_Larva_B_Evil.title>
   <Anty_Larva_B_Evil.titleShort>Anty</Anty_Larva_B_Evil.titleShort>
   <Anty_Larva_B_Evil.baseDescription>[PAWN_nameDef] was an evil larva. [PAWN_pronoun] pretended to be sick to get sweeter jelly, bullied a weaker larva to get the attention of others, and even pulled a nanny's leg!</Anty_Larva_B_Evil.baseDescription>
