@@ -9,6 +9,9 @@
   <Anty_Larva_B_Brave.title>앤티 용감한 유충</Anty_Larva_B_Brave.title>
   <Anty_Larva_B_Brave.titleShort>앤티</Anty_Larva_B_Brave.titleShort>
   <Anty_Larva_B_Brave.baseDescription>[PAWN_nameDef](은) 용감한 애벌레였습니다. 문턱에서 굴러 떨어지기, 딱딱하고 둥그런 물건 위에서 꿈틀거리기, 사나운 날파리들을 스스로 쫓아내기와 같이 다른 애벌레들(은) 상상조차 할 수 없는 위험한 행동을 즐겼습니다. 보모들에게 항상 혼나면서 말이죠.</Anty_Larva_B_Brave.baseDescription>
+  <Anty_Larva_B_Brave_Drop.title>앤티 용감한 유충</Anty_Larva_B_Brave_Drop.title>
+  <Anty_Larva_B_Brave_Drop.titleShort>앤티</Anty_Larva_B_Brave_Drop.titleShort>
+  <Anty_Larva_B_Brave_Drop.baseDescription>[PAWN_nameDef](은) 용감한 애벌레였습니다. 문턱에서 굴러 떨어지기, 딱딱하고 둥그런 물건 위에서 꿈틀거리기, 사나운 날파리들을 스스로 쫓아내기와 같이 다른 애벌레들(은) 상상조차 할 수 없는 위험한 행동을 즐겼습니다. 보모들에게 항상 혼나면서 말이죠.</Anty_Larva_B_Brave_Drop.baseDescription>
   <Anty_Larva_B_Evil.title>앤티 사악한 유충</Anty_Larva_B_Evil.title>
   <Anty_Larva_B_Evil.titleShort>앤티</Anty_Larva_B_Evil.titleShort>
   <Anty_Larva_B_Evil.baseDescription>[PAWN_nameDef](은) 사악한 애벌레였습니다. 조금이라도 더 달달한 젤리를 먹기 위해 아픈 척을 하고, 친구들의 관심을 사기 위해서 한 친구를 따돌리기도 하고, 심지어는 보모의 발을 걸어 넘어뜨리기도 했습니다.</Anty_Larva_B_Evil.baseDescription>
